responsive video for easier testing on mobile

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head><title>Bug repro</title><meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"></head><body>
 
 <!-- only needs a video element for repro, rest is just for debugging -->
-<video controls></video>
+<video style="width: 100%;" controls></video>
 
 <!-- just helpful for debugging, not needed for repro -->
 <p>currentTime: <span id="currentTime"></span></p>
